# mic2e-storage

./: Dockerfile  pyproject.toml  run.py
.github/workflows/: deploy.yml
app/: config.py  env.py  lifespan.py  main.py
app/dependencies/: mongo_dependencies.py
app/routes/: file_routes.py
